add changes about url redirect

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,19 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Account Page";
 }
 
 <main>
    
 
     <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-               Example Azure B2C Framework 4.6 Login MIMCS
-            </p>
-            
-        </section>
-       
+       Account page View
     </div>
 
     <!-- Login / Logout buttons -->
@@ -22,12 +15,12 @@
             <h2 id="loginSection">User Authentication</h2>
             @if (Request.IsAuthenticated)
             {
-                <p>Bienvenido, @User.Identity.Name</p>
+                <p>Account, @User.Identity.Name</p>
                 <button class="btn btn-danger" onclick="location.href='@Url.Action("SignOut", "Home")'">Cerrar sesión</button>
             }
             else
             {
-                <button class="btn btn-success" onclick="location.href='@Url.Action("SignIn", "Home")'">Iniciar sesión MiMCS</button>
+                <button class="btn btn-success" onclick="location.href='@Url.Action("SignIn", "Home")'">Iniciar sesión</button>
             }
         </section>
     </div>
